@@ -1,3 +1,8 @@
+2005-03-29 16:17  antirez
+
+	* ChangeLog, jim.c: Fixed [range] for the case of unique element
+	  possible as output.
+
 2005-03-29 16:03  antirez
 
 	* ChangeLog, jim.c: random number generator fixed. Was a problem
